# image-to-svg

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.js  docker-compose.yml  package-lock.json  package.json  server.js
.github/workflows/: docker-publish.yml  release.yml
lib/: validate.js  vectorize.js
public/: index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  vectorize.rs
