[package]
name = "image-to-svg"
version = "1.0.0"
edition = "2021"

[lib]
name = "image_to_svg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg", "webp", "bmp", "gif"] }
vtracer = "0.6"
base64 = "0.22"
tokio = { version = "1", features = ["fs", "sync"] }
